# wisphive

./: .gitignore  .itr.db  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  justfile  open-source-path.md
.claude/: settings.json
.github/workflows/: ci.yml
claude/: tui-textarea-reference.md
crates/wisphive_adapters/: Cargo.toml
crates/wisphive_adapters/src/: adapter.rs  claude_code.rs  lib.rs  local_llm.rs  red.rs
crates/wisphive_cli/: Cargo.toml
crates/wisphive_cli/src/: main.rs
crates/wisphive_cli/src/commands/: agent.rs  config.rs  daemon.rs  doctor.rs  history.rs  hooks.rs  mod.rs  term.rs  tui.rs
crates/wisphive_daemon/: Cargo.toml
crates/wisphive_daemon/src/: config.rs  event_ingest.rs  lib.rs  notify.rs  process_registry.rs  queue.rs  registry.rs  server.rs  shutdown.rs  state.rs  terminal.rs
crates/wisphive_daemon/tests/: server_integration.rs
crates/wisphive_hook/: Cargo.toml
crates/wisphive_hook/src/: main.rs
crates/wisphive_protocol/: Cargo.toml
crates/wisphive_protocol/src/: lib.rs  types.rs  wire.rs
crates/wisphive_tui/: Cargo.toml
crates/wisphive_tui/src/: app.rs  connection.rs  detail.rs  input.rs  lib.rs  modal.rs  panels.rs  ui.rs
crates/wisphive_web/: Cargo.toml
crates/wisphive_web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/wisphive_web/frontend/src/: App.tsx  app.css
crates/wisphive_web/frontend/src/components/: Agents.tsx  Config.tsx  DetailView.tsx  History.tsx  Modal.tsx  Projects.tsx  Queue.tsx  Sessions.tsx  SpawnModal.tsx  TerminalView.tsx  Terminals.tsx  ToolContent.tsx
crates/wisphive_web/frontend/src/hooks/: useKeyboard.ts  useWisphive.ts
crates/wisphive_web/frontend/src/types/: protocol.ts
crates/wisphive_web/src/: lib.rs  ws_bridge.rs
docs/: investigation-empty-detail-views.md  session-2026-03-22.md
