[workspace]
resolver = "2"
members = [
    "crates/wisphive_protocol",
    "crates/wisphive_daemon",
    "crates/wisphive_hook",
    "crates/wisphive_tui",
    "crates/wisphive_cli",
    "crates/wisphive_adapters",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Josef Aguilar"]

[workspace.dependencies]
# Internal crates
wisphive_protocol = { path = "crates/wisphive_protocol" }
wisphive_daemon = { path = "crates/wisphive_daemon" }
wisphive_hook = { path = "crates/wisphive_hook" }
wisphive_tui = { path = "crates/wisphive_tui" }
wisphive_cli = { path = "crates/wisphive_cli" }
wisphive_adapters = { path = "crates/wisphive_adapters" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# File watching
notify = "7"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", default-features = false, features = ["crossterm"] }
similar = "2"
pulldown-cmark = "0.12"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# System
libc = "0.2"

# Testing
tempfile = "3"
