[package]
name = "wisphive_adapters"
description = "Agent adapter trait and implementations for Wisphive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wisphive_protocol.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
