[package]
name = "wisphive_cli"
description = "CLI and main binary for the Wisphive agent control plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wisphive"
path = "src/main.rs"

[dependencies]
wisphive_protocol.workspace = true
wisphive_daemon.workspace = true
wisphive_tui.workspace = true
wisphive_web.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
ratatui.workspace = true
crossterm.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
