[package]
name = "wisphive_daemon"
description = "Background daemon for the Wisphive agent control plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wisphive_protocol.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
