[package]
name = "wisphive_hook"
description = "Minimal Claude Code hook handler for Wisphive — fail-open, synchronous, fast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "wisphive-hook"
path = "src/main.rs"

[dependencies]
wisphive_protocol.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
