[package]
name = "wisphive_protocol"
description = "Shared types and wire protocol for Wisphive agent control plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
