[package]
name = "wisphive_tui"
description = "Ratatui terminal interface for the Wisphive agent control plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wisphive_protocol.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
similar.workspace = true
